--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,52 +7,15 @@
  * copyright 2024 @Gautam Kumar
  */
 
+ /* 
+ 
+ #LODER
+ 
+ */
 
 
- .btn {
-  border: none;
-  width: 14em;
-  height: 3em;
-  border-radius: 2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-  background: rgb(30,30,31);
-  cursor: pointer;
-  transition: all 450ms ease-in-out;
-}
 
-.sparkle {
-  fill: #AAAAAA;
-  transition: all 800ms ease;
-}
-
-.text {
-  font-weight: 600;
-  color: #AAAAAA;
-  font-size: medium;
-}
-
-.btn:hover {
-  background: linear-gradient(0deg,#FFD56B,#FFD56B);
-  box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4),
-  inset 0px -4px 0px 0px rgba(0, 0, 0, 0.2),
-  0px 0px 0px 4px rgba(255, 255, 255, 0.2),
-  0px 0px 180px 0px #FFD56B;
-  transform: translateY(-2px);
-}
-
-.btn:hover .text {
-  color: white;
-}
-
-.btn:hover .sparkle {
-  fill: white;
-  transform: scale(1.2);
-} 
-
-
+ 
 
 /*-----------------------------------*\
   #CUSTOM PROPERTY
@@ -1595,7 +1558,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 @media (min-width: 768px) {
 
   /**
-   * REUSED STYLE
+   * REUSED STYLE 
    */
 
   .sidebar, article { width: 700px; }
